# github_actions_test

./: CMakeLists.txt  config  start.sh
.github/workflows/: c-cpp.yml
_test/: test.cpp
scripts/: production.sh  run.sh
